Synchronize updates to template files

--- a/init_proj/init_template/example.opam.tmpl
+++ b/init_proj/init_template/example.opam.tmpl
@@ -15,7 +15,7 @@ depends: [
 pin-depends: [
 ]
 
-build: [make "GOCACHE=_build/.gocache" "-j%{jobs}%"]
+build: [make "-j%{jobs}%"]
 install: ["go" "tool" "perennial-cli" "install"]
 build-env: [
   [GOCACHE = "%{build}%/_build/.gocache"]
